k8s/overlays/prod/environment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: payment-gateway
spec:
  template:
    spec:
      containers:
        - name: payment-gateway
