k8s/overlays/prod/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: opsight-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: payment-gateway
spec:
  template:
    spec:
      containers:
        - name: payment-gateway
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: opsight-ai-rca
spec:
  template:
    spec:
      containers:
        - name: ai-rca
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: "1500m"
              memory: 1536Mi
